# bogokernel

./: .gitignore  Cargo.toml  GPU_TEST_INSTRUCTIONS.md  PAGE_LEAK_FIX.md  README.md  TESTING.md  TESTING_PAGE_FIX.md  TEST_COVERAGE_SUMMARY.md  VIRTIO_GPU_ALIGNMENT_FIX.md  VIRTIO_GPU_FIX.md  VIRTIO_GPU_FRAMEBUFFER.md  kernel.map  lisp_advanced_test_output.txt  lisp_demo_output.txt  lisp_session_capture.txt  lisp_test_output.txt  macro_test_output.txt  run.bat  run.sh  rust-toolchain.toml  test.bat  test.ps1  test.py  test_input.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: BUILD_GUIDE.md  CURSES_NOTES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  copilot-instructions.md
c_hello/: build.bat  build.sh  crt0.s  hello.c
cat/: Cargo.toml
cat/src/: main.rs
crogue/: build.bat  build.sh  crogue.c
curses_test/: EXPECTED_OUTPUT.txt  README.md  build.bat  build.sh  compile_flags.txt  curses_test.c  simple_test.c
docs/: CURSES_UPDATE_SUMMARY.md  FILESYSTEM_TESTING.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_GPU_TEST.md  LISP_IMPLEMENTATION_SUMMARY.md  SECURITY_SUMMARY.md  VIRTIO_GPU_DEBUG.md
forth/: Cargo.toml  README.md
forth/src/: lib.rs  main.rs
kernel/: Cargo.toml  build.rs  cat.elf  memory.ld  userapp.elf
kernel/src/: dungeon.map  elf.rs  entry.rs  fs.rs  kalloc.rs  keyboard.rs  lib.rs  logging.rs  main.rs  sbi.rs  stack.rs  sv39.rs  timer.rs  trap.rs  trap_entry.rs  uart.rs  user.rs  user_blob.rs
kernel/src/boot/: cmdline.rs
kernel/src/console/: mod.rs
kernel/src/display/: fb_console.rs  font.rs  mod.rs  virtio_gpu.rs
libc/: README.md  build.bat  build.sh  compile_flags.txt
libc/include/: conio.h  ctype.h  curses.h  errno.h  fcntl.h  font.h  gpu.h  limits.h  pwd.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdio.h  stdlib.h  string.h  term.h  time.h  unistd.h
libc/include/sys/: stat.h  types.h
libc/src/: crt0.s  ctype.c  curses.c  font.c  signal.c  stat.c  stdio.c  stdlib.c  string.c  syscall.c  time.c  unistd.c
lisp/: README.md  build.bat  build.sh  linker.ld  lisp.c  syscalls.c
rogue/: build.bat  build.sh  config.h  extern.h  linker.ld  mach_dep.c  mdport.c  pack.c  rogue  rogue.h  save.c  state.c  xcrypt.c
uapi/: Cargo.toml
uapi/src/: font.rs  lib.rs
userapp/: Cargo.toml
userapp/src/: main.rs
usys/: Cargo.toml
usys/src/: lib.rs
