[package]
name = "cat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cat"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "off"
opt-level = "s"
codegen-units = 1
strip = "none"

[package.metadata.cargo-xbuild]
target = "riscv64gc-unknown-none-elf"

[dependencies]
usys = { path = "../usys" }
uapi = { path = "../uapi" }
