[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
name = "kernel_lib"
path = "src/lib.rs"
# Library tests should run on host, not riscv target

[features]
# Enable GPU display mode for testing virtio-gpu framebuffer
gpu = []

[dependencies]
riscv = "0.14.0"
spin = "0.10.0"
goblin = { version = "0.10.1", default-features = false, features = ["elf32", "elf64", "endian_fd"] }
linked_list_allocator = "0.10"
heapless = { version = "0.9.1", default-features = false }
uapi = { path = "../uapi" }


