[package]
name = "userapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rogue"
path = "src/bin/rogue.rs"
test = false
bench = false

[[bin]]
name = "shell"
path = "src/bin/shell.rs"
test = false
bench = false

[[bin]]
name = "fstest"
path = "src/bin/fstest.rs"
test = false
bench = false

[package.metadata.cargo-xbuild]
target = "riscv64gc-unknown-none-elf"

[dependencies]
usys = { path = "../usys" }
